--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div style="text-align:center">
         <h1>Simple 3D Scene programming demo</h1>
         <div>Click in the center to move forward, or at sides of the picture to turn left or right</div><br/>
-        <canvas id="demo" width="880" height="500" style="border:5px solid #888;border-radius: 5px;background: white;"></canvas>
+        <canvas id="demo" width="880" height="500" style="border:5px solid #888;border-radius: 5px;background: #888;"></canvas>
     </div>
     <script>
         scene = new Scene3d('demo');
