--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simple 3D Scene</title>
     <script src="./scene3d.js"></script>
 </head>
-<body>
+<body style="background-color:lightgrey;">
     <div style="text-align:center">
         <h1>Simple 3D Scene programming demo</h1>
         <div>Click in the center to move forward, or at sides of the picture to turn left or right</div><br/>
